--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,3 +43,5 @@ opentelemetry-api==1.22.0
 opentelemetry-sdk==1.22.0
 opentelemetry-instrumentation-fastapi==0.43b0
 azure-monitor-opentelemetry==1.2.0
+applicationinsights==0.11.10
+opencensus-ext-azure==1.1.13
