feat: Voice assistant uses correct search endpoint based on page
- Add SearchMode type ('semantic' | 'agentic') to app store
- HomePage sets searchMode to 'semantic' on mount
- AgenticSearchPage sets searchMode to 'agentic' on mount
- useRealtimeSession uses appropriate endpoint based on searchMode
- Update Dockerfile with debug steps for build verification

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 # Build arguments for Vite environment variables
 ARG VITE_BACKEND_URL=http://localhost:8000
 ARG VITE_WS_URL=ws://localhost:8000
+ARG CACHEBUST=1
 
 # Set as environment variables for build
 ENV VITE_BACKEND_URL=$VITE_BACKEND_URL
@@ -17,8 +18,16 @@ COPY package*.json ./
 # Install dependencies
 RUN npm ci
 
+# Cache bust - this forces rebuild of everything below when CACHEBUST changes
+RUN echo "Cache bust: $CACHEBUST"
+
 # Copy source code
 COPY . .
+
+# Debug: Show content of key file to verify source is correct
+RUN head -60 src/store/appStore.ts | grep -A 2 "SearchMode" || echo "SearchMode NOT FOUND"
+RUN grep -n "searchMode" src/hooks/useRealtimeSession.ts || echo "searchMode NOT FOUND in useRealtimeSession"
+RUN grep -n "setSearchMode" src/pages/HomePage.tsx || echo "setSearchMode NOT FOUND in HomePage"
 
 # Build the application
 RUN npm run build
