feat(YouTube): Add YouTube DIY tutorial videos feature
- Add YouTubeService for YouTube Data API v3 integration
- Add get_diy_videos tool for agent to fetch relevant tutorials
- Integrate YouTube videos into realtime.py with auto-trigger on product search
- Add frontend components to display dismissible DIY video cards
- Update appStore with diyVideos state management
- Update useRealtimeSession hook to handle diy_videos messages
- Add YOUTUBE_API_KEY to settings configuration
- Update README with YouTube DIY Videos feature documentation

Products that trigger DIY videos:
- HVAC filters, flooring, plumbing fixtures
- Light fixtures, appliances, paint
- Any product requiring installation

YouTube API prioritizes highly-viewed, recent tutorial videos.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,6 +38,9 @@ passlib[bcrypt]==1.7.4
 tenacity==8.2.3
 structlog==24.1.0
 
+# YouTube API
+google-api-python-client==2.111.0
+
 # Observability
 opentelemetry-api==1.22.0
 opentelemetry-sdk==1.22.0
